Update start.sh